--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -18,7 +18,7 @@
     <header>
 
         <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-            <a href="./index.html"><img src="../img/logo3.jpg" alt="logo"></a>
+            <a href="../index.html"><img src="../img/logo3.jpg" alt="logo"></a>
         </div>
 
         <nav>
@@ -41,16 +41,33 @@
             <h1>Hace tu pedido!</h1>
         </div>
 
-        <section>
+        <section class="contenedor-pedidos">
 
-            <a href="https://www.pedidosya.com.ar/"><img src="../img/icono-pedidosya.png" alt="icono de pedidosya"></a>
+            <div class="wrapper-pedidos">
 
-            <a href="https://www.pedidosya.com.ar/"><input type="submit" value="Pedir"></a>
+                <div class="pedidos">
 
-            <a href="https://www.rappi.com.ar/"><img src="../img/icono-rappi.png" alt="icono de rappi"></a>
+                    <a href="https://www.pedidosya.com.ar/" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                        data-aos-duration="2000"><img src="../img/icono-pedidosya.png" alt="icono de pedidosya"></a>
 
-            <a href="https://www.rappi.com.ar/"><input type="submit" value="Pedir"></a>
+                    <a href="https://www.rappi.com.ar/" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                        data-aos-duration="2000"><img src="../img/icono-rappi.png" alt="icono de rappi"></a>
 
+                    <a href="https://www.ubereats.com/es" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                        data-aos-duration="2000"><img src="../img/icono-ubereats.png" alt="icono de ubereats"></a>
+
+                    <a href="https://www.mercadopago.com.ar/menu/stop-landing" data-aos="flip-left"
+                        data-aos-easing="ease-out-cubic" data-aos-duration="2000"><img
+                            src="../img/icono-mercadopago.png" alt="icono de mercadopago"></a>
+
+                    <a href="https://www.grubhub.com/" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                        data-aos-duration="2000"><img src="../img/icono-grubhug.png" alt="icono de grubhug"></a>
+
+                    <a href="https://glovoapp.com/ar/es/" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                        data-aos-duration="2000"><img src="../img/icono-glovo.png" alt="icono de glovo"></a>
+
+                </div>
+            </div>
         </section>
 
     </main>
@@ -58,10 +75,11 @@
     <footer>
 
 
-        <h3><div>Buenos</div>
-            
+        <h3>
+            <div>Buenos</div>
+
             <div>Aires</div>
-            
+
             <div>Burguers</div>
         </h3>
 
@@ -78,9 +96,12 @@
 
         <div class="redes-footer">
             <ul>
-                <li><a href="https://twitter.com/home" target="_blank"><span style="color: white"><i class="fa-brands fa-x-twitter"></i></span></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><span style="color: rgb(219, 87, 109)"></style> <i class="fa-brands fa-instagram"></i></span></a></li>
-                <li><a href="https://www.facebook.com" target="_blank"><span style="color: rgb(25, 25, 155)"></style> <i class="fa-brands fa-facebook"></i></span></a></li>
+                <li><a href="https://twitter.com/home" target="_blank"><span style="color: white"><i
+                                class="fa-brands fa-x-twitter"></i></span></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><span style="color: rgb(219, 87, 109)"></style>
+                            <i class="fa-brands fa-instagram"></i></span></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><span style="color: rgb(25, 25, 155)"></style> <i
+                                class="fa-brands fa-facebook"></i></span></a></li>
             </ul>
         </div>
 
