--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -18,7 +18,7 @@
     <header>
 
         <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-            <a href="./index.html"><img src="../img/logo3.jpg" alt="logo"></a>
+            <a href="../index.html"><img src="../img/logo3.jpg" alt="logo"></a>
         </div>
 
         <nav>
