--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las mas ricas hamburgesas de Buenos Aires | Delivery sin cargo de Lunes a Viernes de 11:00hs a 00:00hs">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>pedidos</title>
+    <title>Bs. As. Burgers | Pedidos</title>
 
 </head>
 
