--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las mas ricas hamburgesas de Buenos Aires | Productos libres de agroquímicos"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>PreEntrega2</title>
+    <title>Bs. As. Burguers | Las famosas hamburguesas de Zona Norte</title>
 </head>
 
 <body>
@@ -67,6 +68,20 @@
                 sociales y enterate de promociones y sorteos que tenemos para vos! </p>
 
         </section>
+
+        <div class="franquiciate-index">
+
+            <div class="franquiciate-wrapper">
+
+            <div class="franquiciate-texto1">- EL NEGOCIO DE TUS SUEÑOS -</div>
+
+            <div class="franquiciate-texto2">FRANQUICIATE</div>
+
+            <div class="formulario__btn">
+                <a href="./pages/contacto.html"><input type="submit" value="Consultar" class="btn"></a>
+            </div>
+        </div>
+        </div>
 
     </main>
 
