--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las mas ricas hamburgesas de Buenos Aires | No dudes en consultarnos dudas, quejas, o franquiciarte">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>contacto</title>
+    <title>Bs. As. Burgers | Contacto</title>
 
 </head>
 
@@ -75,6 +76,7 @@
                             <option value="">Postularme</option>
                             <option value="">Recomendacion</option>
                             <option value="">Reclamo</option>
+                            <option value="">Franquicia</option>
                             <option value="">Otro</option>
                         </select>
                     </div>
