Se realizaron modificaciones en contacto y otras correciones

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
             <h1>Buenos Aires Burguers</h1>
             <div data-aos="fade-up-left">
-                <div class="img1">
+                <picture class="img1">
                     <img src="./img/hamburguesa-index1.png" alt="imagen de hamburguesa">
-                </div>
+                </picture>
             </div>
 
         </section>
@@ -68,9 +68,9 @@
 
             <h2>Quienes somos</h2>
             <div data-aos="fade-up-right">
-                <div class="img2">
+                <picture class="img2">
                     <img src="./img/hamburguesa-index2.png" alt="imagen de hamburguesa">
-                </div>
+                </picture>
             </div>
 
             <p class="texto-index">Nacimos en 2005 en Vicente Lopez, provenientes de una extensa tradición gastronómica
@@ -114,7 +114,7 @@
 
             <h4>Contacto</h4>
             <ul>
-                <li>BsAsBurguers@gmail.com</li>
+                <li><a href="https://gmail.com" target="_blank">BsAsBurguers@gmail.com</a></li>
                 <li>Derechos reservados © 2023</li>
             </ul>
         </div>
