--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -95,7 +95,7 @@
 
                     <div class="formulario__text-area">
                         <label for="texto-usuario">Ingrese su comentario o consulta</label>
-                        <textarea name="" id="texto-usuario" cols="30" rows="10" placeholder="Mensaje..."></textarea>
+                        <textarea name="" id="texto-usuario" cols="20" rows="5" placeholder="Mensaje..."></textarea>
                     </div>
 
                     <div class="formulario__btn">
@@ -123,7 +123,7 @@
 
             <h4>Contacto</h4>
             <ul>
-                <li>BsAsBurguers@gmail.com</li>
+                <li><a href="https://gmail.com" target="_blank">BsAsBurguers@gmail.com</a></li>
                 <li>Derechos reservados © 2023</li>
             </ul>
         </div>
