--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -102,7 +102,7 @@
 
             <h4>Contacto</h4>
             <ul>
-                <li>BsAsBurguers@gmail.com</li>
+                <li><a href="https://gmail.com" target="_blank">BsAsBurguers@gmail.com</a></li>
                 <li>Derechos reservados © 2023</li>
             </ul>
         </div>
