--- a/pages/menu.html
+++ b/pages/menu.html
@@ -63,8 +63,7 @@
 
                 <div class="contenedor-clasicas">
 
-                    <div class="imagen-clasica"><a href="./pedidos.html" data-aos="zoom-out"><img
-                                src="../img/clasica1.jpg" alt="Hamburguesa"></a></div>
+                    <a href="./pedidos.html" data-aos="zoom-out"><img src="../img/clasica1.jpg" alt="Hamburguesa"></a>
                     <a href="./pedidos.html" data-aos="zoom-out"><img src="../img/clasica2.jpg" alt="Hamburguesa"></a>
                     <a href="./pedidos.html" data-aos="zoom-out"><img src="../img/clasica3.jpg" alt="Hamburguesa"></a>
                     <a href="./pedidos.html" data-aos="zoom-out"><img src="../img/clasica4.png" alt="Hamburguesa"></a>
@@ -136,7 +135,7 @@
 
             <h4>Contacto</h4>
             <ul>
-                <li>BsAsBurguers@gmail.com</li>
+                <li><a href="https://gmail.com" target="_blank">BsAsBurguers@gmail.com</a></li>
                 <li>Derechos reservados © 2023</li>
             </ul>
         </div>
